objects/TM_Job_Task__c/TM_Job_Task__c.object-meta.xml
<CustomObject>
    <label>T&amp;M Job Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T&amp;M Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>