objects/TM_Job_Task__c/fields/Sales_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_ID__c</fullName>
    <formula>TM__r.Sales_Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order ID</label>
    <type>Text</type>
</CustomField>