objects/TM_Job_Task__c/fields/Sales_Order_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Job_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Job Task</label>
    <referenceTo>Sales_Order_Job_Task__c</referenceTo>
    <relationshipLabel>T&amp;M Job Tasks</relationshipLabel>
    <relationshipName>TM_Job_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>