objects/TM_Job_Task__c/fields/Task_No__c.field-meta.xml
<CustomField>
    <fullName>Task_No__c</fullName>
    <formula>Sales_Order_Job_Task__r.Task_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>