objects/TM_Job_Task__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <label>TM</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>T&amp;M Job Tasks</relationshipLabel>
    <relationshipName>TM_Job_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>